--- a/about.html
+++ b/about.html
@@ -70,6 +70,8 @@
 						<div class="angle-small-right"></div>						
 						<div class="t2 center">2015年09月</div>
 						<div class="center">盔甲科技核心团队组建，<br>全部具备10年以上资深行业经验</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div> 
 					<div class="radio-border m-radio-right hide-before">
 						<div class="radio-coin"></div>
@@ -91,6 +93,8 @@
 							盔甲科技核心团队组建，<br>
 							全部具备10年以上资深行业经验
 						</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div>
 				</div>
 			</div>
@@ -103,6 +107,8 @@
 						<div class="center">
 							确定互联网同行系统解决方案方向，以最资深运营及技术团队调研变革发展中的车队，贴身实践研发“Auto+车队管理平台”
 						</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div> 
 					<div class="radio-border m-radio-right">
 						<div class="radio-coin"></div>
@@ -123,6 +129,8 @@
 						<div class="center">
 							自由知识产权“Auto+车队运营管理平台”正式发布，获得“最专业产品”口碑
 						</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div>
 				</div>
 			</div>
@@ -246,21 +254,21 @@
 				</div>	
 				<div class="row mt50">
 					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="center">
+						<div class="center mt20">
 							<img src="img/about/phone.png" alt="联系电话">
 							<div class="bold mt mb">联系电话</div>
 							<div>电话热线：021-80394647-806</div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="center border-lf">
+						<div class="center border-lf mt20">
 							<img src="img/about/address.png" alt="公司地址">
 							<div class="bold mt mb">公司地址</div>
 							<div>公司地址：上海市宝山区丰翔路1000号1号楼3楼</div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="center">
+						<div class="center mt20">
 							<img src="img/about/email.png" alt="邮箱地址">
 							<div class="bold mt mb">邮箱地址</div>
 							<div>Email：sale@ikuijia.com</div>
@@ -274,8 +282,8 @@
 			</div>
 		</div>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+		<!-- <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script> -->
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="js/bootstrap.min.js"></script>
+		<!-- <script src="js/bootstrap.min.js"></script> -->
 	</body>
 	</html>
