--- a/description.html
+++ b/description.html
@@ -48,26 +48,30 @@
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-		<div class="headerImg">
-			<img src="img/description/banner-txt.png" alt="产品介绍" class="center-img">
+		<div class="headerImg center">
+			<div class="t1 color-white">产品介绍</div>
+			<div class="textLine"></div>
+			<div class="t1 color-white tEng">PRODUCT  DESCRIPTION</div>
 		</div>			
 	</div>
 	<div class="container">
 		<div class="row conTitle">
 			<div class="col-xs-12 col-sm-12 col-md-12">
-				<h1 class="t1">产品功能</h1>
+				<div class="t1 mt20">产品功能</div>
 				<div class="spe"></div>
-				<div class="tEng">Product Features</div>
+				<div class="t3 tEng bold">Product Features</div>
 				<div class="textLine"></div>
 			</div> 		
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<div class="card">	
-					<img src="img/description/op-spr.png" alt="运营监管">
+					<div class="center img-p50 mt20">
+						<img src="img/description/op-spr.png" alt="运营监管">
+					</div>
 					<div class="t2">运营监管</div>
-					<div class="t3">
-						<span class="text-decoration">资产、合同</span>、司机各类业务的情况一览无遗
+					<div class="t3 t3-height mb">
+						资产、合同、司机各类业务的情况一览无遗
 					</div>
 					<div class="infor">
 						<div class="inftxt">
@@ -85,9 +89,11 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<div class="card">	
-					<img src="img/description/mpay.png" alt="钱款支付">
+					<div class="center img-p50 mt20">
+						<img src="img/description/mpay.png" alt="钱款支付">
+					</div>
 					<div class="t2">钱款支付</div>
-					<div class="t3"><span class="text-decoration">支持微信公众号</span>在线支付渠道，并自动关联当月租金和管理费</div>
+					<div class="t3 t3-height mb">支持微信公众号在线支付渠道，并自动关联当月租金和管理费</div>
 					<div class="infor">
 						<div class="inftxt">
 							<b>租金缴纳：</b>根据与司机签到的合同情况，提前提醒到每一位司机和公司管理人员
@@ -101,9 +107,11 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<div class="card">	
-					<img src="img/description/GPS-OBD.png" alt="设备管理 (GPS、OBD)">
+					<div class="center img-p50 mt20">
+						<img src="img/description/GPS-OBD.png" alt="设备管理 (GPS、OBD)">
+					</div>
 					<div class="t2">设备管理 (GPS、OBD)</div>
-					<div class="t3"><span class="text-decoration">每台车安装</span>的是何种设备，费用是否过期，车辆是否失踪？</div>
+					<div class="t3 t3-height mb">每台车安装的是何种设备，费用是否过期，车辆是否失踪？</div>
 					<div class="infor">
 						<div class="inftxt"><b>装车设备：</b>管理各类设备的装车情况，跟踪设备SIM卡到期时间</div>
 						<div class="inftxt"><b>车辆监控：</b>车辆越界与否，去向何方，行程回放，失踪提醒</div>
@@ -112,9 +120,11 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<div class="card">	
-					<img src="img/description/brule.png" alt="违章检测">
+					<div class="center img-p50 mt20">
+						<img src="img/description/brule.png" alt="违章检测">
+					</div>
 					<div class="t2">违章检测</div>
-					<div class="t3"><span class="text-decoration">中国最准确</span>的违章信息发布渠道</div>
+					<div class="t3 t3-height mb">中国最准确的违章信息发布渠道</div>
 					<div class="infor">					
 						<div class="inftxt">
 							<b>违章管理：</b>系统在每月的固定时间，自动完成车辆违章数据的查询，并提醒到司机和公司管理者
@@ -124,10 +134,12 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<div class="card">	
-					<img src="img/description/msg.png" alt="短信推送">
+					<div class="center img-p50 mt20">
+						<img src="img/description/msg.png" alt="短信推送">
+					</div>
 					<div class="t2">短信推送</div>
-					<div class="t3">
-						<span class="text-decoration">老板不在公司</span>也可以知道公司的运营情况，司机再远也能收到短信提醒
+					<div class="t3 t3-height mb">
+						老板不在公司也可以知道公司的运营情况，司机再远也能收到短信提醒
 					</div>
 					<div class="infor">		
 						<div class="inftxt">
@@ -143,9 +155,11 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-6">
 				<div class="card">	
-					<img src="img/description/int-mvm.png" alt="智能移动端">
+					<div class="center img-p50 mt20">
+						<img src="img/description/int-mvm.png" alt="智能移动端">
+					</div>
 					<div class="t2">智能移动端</div>
-					<div class="t3"><span class="text-decoration">外勤没有网？</span>电脑背着太重？照片记录没地存。</div>
+					<div class="t3 t3-height mb">外勤没有网？电脑背着太重？照片记录没地存。</div>
 					<div class="infor">
 						<div class="inftxt">
 							<b>司机/车辆证照：</b>
@@ -171,12 +185,12 @@
 					<div class="textLine"></div>
 				</div>		
 			</div>
-			<div class="row">
+			<div class="row mt50">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="sCard mb30">
-						<img src="img/description/1.jpg" alt="短信：人文关怀、祝福信息">
 						<div class="conDiv pull-left">1</div>
 						<div class="conTxt">短信：人文关怀、祝福信息</div>
+						<img src="img/description/1.jpg" alt="短信：人文关怀、祝福信息">
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4">
@@ -188,16 +202,16 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="sCard mb30">
-						<img src="img/description/3.jpg" alt="手机APP:老电视APP：监控投屏/工作看板">
 						<div class="conDiv pull-left">3</div>
 						<div class="conTxt">电视APP：监控投屏/工作看板</div>
+						<img src="img/description/3.jpg" alt="手机APP:老电视APP：监控投屏/工作看板">						
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="sCard mb30">
-						<img src="img/description/4.jpg" alt="电脑端：核心办公平台">
 						<div class="conDiv pull-left">4</div>
 						<div class="conTxt">电脑端：核心办公平台</div>
+						<img src="img/description/4.jpg" alt="电脑端：核心办公平台">
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4">
@@ -209,9 +223,9 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="sCard mb30">
-						<img src="img/description/6.jpg" alt="微信公众号：信息推送，移动交款">
 						<div class="conDiv pull-left">6</div>
 						<div class="conTxt">微信公众号：信息推送，移动交款</div>
+						<img src="img/description/6.jpg" alt="微信公众号：信息推送，移动交款">						
 					</div>
 				</div>
 			</div>
@@ -228,81 +242,81 @@
 		</div>
 		<div class="row mt20 advantage">
 			<div class="col-xs-6 col-sm-3 col-md-4 xs-screen xs-left">
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-right mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-right car-item">
 						<div class="mb5 imgRgt">
 							<img src="img/description/A1.png" alt="三次点击">
 						</div>
-						<div class="t3">三次点击</div>
+						<div class="car-text">三次点击</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-right mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-right car-item">
 						<div class="mb5 imgRgt">
 							<img src="img/description/A2.png" alt="更新迭代，一周两次">
 						</div>
-						<div class="t3">更新迭代，一周两次</div>
+						<div class="car-text">更新迭代，一周两次</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-right mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-right car-item">
 						<div class="mb5 imgRgt">
 							<img src="img/description/A3.png" alt="造“客观信用体系”">
 						</div>
-						<div class="t3">造“客观信用体系”</div>
+						<div class="car-text">造“客观信用体系”</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-right mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-right car-item">
 						<div class="mb5 imgRgt">
 							<img src="img/description/A4.png" alt="电视APP的故事">
 						</div>
-						<div class="t3">电视APP的故事</div>
+						<div class="car-text">电视APP的故事</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
+			<div class="col-xs-12 col-sm-6 col-md-4 cart-wrap">
 				<img src="img/description/car.png" alt="产品优势" width="100%">
 			</div>
 			<div class="col-xs-6 col-sm-3 col-md-4 xs-screen xs-right">
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-left mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-left car-item">
 						<div class="mb5 imgLeft">
 							<img src="img/description/B1.png" alt="动态变化的5个媒体端">
 						</div>
-						<div class="t3">动态变化的5个媒体端</div>
+						<div class="car-text">动态变化的5个媒体端</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-left mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-left car-item">
 						<div class="mb5 imgLeft">
 							<img src="img/description/B2.png" alt="半天培训，一天掌握">
 						</div>
-						<div class="t3">半天培训，一天掌握</div>
+						<div class="car-text">半天培训，一天掌握</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-left mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-left car-item">
 						<div class="mb5 imgLeft">
 							<img src="img/description/B3.png" alt="系统进化机制">
 						</div>
-						<div class="t3">系统进化机制</div>
+						<div class="car-text">系统进化机制</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">
-					<div class="pull-left mt50">
+				<div class="col-xs-12 col-sm-12 col-md-12 car-item-wrap">
+					<div class="pull-left car-item">
 						<div class="mb5 imgLeft">
 							<img src="img/description/B4.png" alt="限牌，指标，业态变迁">
 						</div>
-						<div class="t3">限牌，指标，业态变迁</div>
+						<div class="car-text">限牌，指标，业态变迁</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<!-- <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script> -->
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="js/bootstrap.min.js"></script>
+	<!-- <script src="js/bootstrap.min.js"></script> -->
 </body>
 </html>
