--- a/solution.html
+++ b/solution.html
@@ -49,21 +49,26 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 		<div class="headerImg">
-			<img src="img/solutions/banner-txt.png" alt="产品介绍" class="center-img">
+			<!-- <img src="img/solutions/banner-txt.png" alt="产品介绍" class="center-img"> -->
+			<div class="t1 color-white">解决方案</div>
+			<div class="textLine"></div>
+			<div class="t1 color-white tEng">SOLUTIONS</div>
 		</div>			
 	</div>
 	<div class="con01 container mt50">
-		<div class="row conTitle">
+		<div class="row conTitle ctt-s1">
 			<div class="col-xs-12 col-sm-12 col-md-12">
-				<h1 class="t1">| Auto+车辆SAAS服务解决方案</h1>
+				<div class="t1">| Auto+车辆SAAS服务解决方案</div>
 				<div class="tEng">Auto+ Vehicle SAAS Service Solutions</div>
 				<div class="textLine"></div>
-				<div class="dash">解决痛点</div>
+				<div class="dash t2">解决痛点</div>
 			</div> 		
 		</div>
-		<div class="row mt20">
+		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">
-				<img src="img/solutions/01.png" alt="资料泛滥，信息更新不及时">
+				<div class="center mt20">
+					<img src="img/solutions/n1.png" alt="资料泛滥，信息更新不及时">
+				</div>
 				<div class="t3 mt20">资料泛滥，信息更新不及时</div>
 				<div class="t3 red line-through">误 事 误 工</div>
 				<div class="infor mt">
@@ -74,7 +79,9 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">
-				<img src="img/solutions/02.png" alt="每月收租反复催缴">
+				<div class="center mt20">
+				<img src="img/solutions/n2.png" alt="每月收租反复催缴">
+			</div>
 				<div class="t3 mt20">每月收租反复催缴</div>
 				<div class="t3 red line-through">劳 心 伤 神</div>
 				<div class="infor mt">
@@ -84,7 +91,9 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">
-				<img src="img/solutions/03.png" alt="团队工作经常遗漏，规则制度">
+				<div class="center mt20">
+				<img src="img/solutions/n3.png" alt="团队工作经常遗漏，规则制度">
+			</div>
 				<div class="t3 mt20">团队工作经常遗漏，规则制度</div>
 				<div class="t3 red line-through">形 同 虚 设</div>
 				<div class="infor mt">
@@ -96,7 +105,9 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">	
-				<img src="img/solutions/01.png" alt="证照过期天天跑政府">
+				<div class="center mt20">
+				<img src="img/solutions/n4.png" alt="证照过期天天跑政府">
+			</div>
 				<div class="t3 mt20">证照过期天天跑政府</div>
 				<div class="t3 red line-through">费 时 费 力</div>
 				<div class="infor mt">
@@ -106,7 +117,7 @@
 				</div>
 			</div>
 		</div>	
-		<div class="dash mt50">适应业态</div>	
+		<div class="dash t2 mt50">适应业态</div>	
 		
 		<div class="container">
 			<img src="img/solutions/adapt.png" alt="适应业态">
@@ -114,7 +125,7 @@
 	</div>
 	<div class="con02 mt50">
 		<div class="container">
-			<div class="row conTitle">
+			<div class="row conTitle ctt-s2">
 				<div class="col-xs-12 col-sm-12 col-md-12">
 					<h1 class="t1">| 金融服务车辆资产管理解决方案</h1>
 					<div class="tEng">Financial Services Vehicle Asset Management Solutions</div>
@@ -179,7 +190,7 @@
 		</div>
 	</div>
 	<div class="con03 mt50 container">
-		<div class="row conTitle">
+		<div class="row conTitle ctt-s3">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 				<h1 class="t1">| 保险行业车辆运营UBI解决方案</h1>
 				<div class="tEng">UBI Solutions For Vehicle Operations In The Insurance Industry</div>
