--- a/download.html
+++ b/download.html
@@ -45,22 +45,21 @@
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
-	</nav>
-	<div class="">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="d-left center">
-						<div class="t2">智慧车队管理端v2.3</div>
-						<div class="t3">我  使  客  户  更  强  大  ！</div>
-						<!-- <div class="ecode center"> -->
-							<div class="col-xs-12 col-sm-12 col-md-12 ecodeImg">
-								<img src="img/download/ecode.jpg" alt="二维码">
-							</div>
-							<div class="col-xs-12 col-sm-12 col-md-12">
-								<a  href="#" class="btn btn-transparent iphone">iPhonen版</a>
-								<a  href="description.html" class="btn btn-transparent android">Android版</a>								
-							</div>
+	</nav>	
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-6">
+				<div class="d-left center">
+					<div class="t2">智慧车队管理端v2.3</div>
+					<div class="t3">我  使  客  户  更  强  大  ！</div>
+					<!-- <div class="ecode center"> -->
+						<div class="col-xs-12 col-sm-12 col-md-12 ecodeImg">
+							<img src="img/download/ecode.jpg" alt="二维码">
+						</div>
+						<div class="col-xs-12 col-sm-12 col-md-12">
+							<a  href="#" class="btn btn-transparent iphone">iPhonen版</a>
+							<a  href="description.html" class="btn btn-transparent android">Android版</a>								
+						</div>
 						<!-- </div> -->
 					</div>
 				</div>
@@ -71,10 +70,11 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<!-- <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script> -->
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<!-- <script src="js/bootstrap.min.js"></script> -->
-</body>
-</html>
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/index.js"></script>
+	</body>
+	</html>
