--- a/about.html
+++ b/about.html
@@ -49,7 +49,10 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 		<div class="headerImg">
-			<img src="img/about/banner-txt.png" alt="产品介绍" class="center-img">
+			<!-- <img src="img/about/banner-txt.png" alt="产品介绍" class="center-img"> -->
+			<div class="t1 color-white">关于我们</div>
+			<div class="textLine"></div>
+			<div class="t1 color-white tEng">ABOUT  US</div>
 		</div>			
 	</div>
 	<div class="about01">
@@ -282,8 +285,9 @@
 			</div>
 		</div>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<!-- <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script> -->
+		<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<!-- <script src="js/bootstrap.min.js"></script> -->
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 	</html>
