--- a/solution.html
+++ b/solution.html
@@ -134,7 +134,7 @@
 			</div>
 			<div class="row mt20">
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/cloud-platform.png" alt="多机构管理云平台" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
@@ -147,7 +147,7 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">				
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/assets.png" alt="资产管理：全面、规范、及时的资产管理" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
@@ -160,7 +160,7 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">				
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/task.png" alt="任务管理：每天的工作任务自动提醒一目了然" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
@@ -173,7 +173,7 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">				
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/archives.png" alt="档案管理：全周期的资产档案、履约档案、客户档案自动形成" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
