--- a/download.html
+++ b/download.html
@@ -47,34 +47,51 @@
 		</div><!-- /.container-fluid -->
 	</nav>	
 	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-6">
+		<div class="row dnld-height">
+			<div class="col-xs-12 col-sm-6 col-md-6 col-ecode">
 				<div class="d-left center">
 					<div class="t2">智慧车队管理端v2.3</div>
 					<div class="t3">我  使  客  户  更  强  大  ！</div>
-					<!-- <div class="ecode center"> -->
-						<div class="col-xs-12 col-sm-12 col-md-12 ecodeImg">
-							<img src="img/download/ecode.jpg" alt="二维码">
-						</div>
-						<div class="col-xs-12 col-sm-12 col-md-12">
-							<a  href="#" class="btn btn-transparent iphone">iPhonen版</a>
-							<a  href="description.html" class="btn btn-transparent android">Android版</a>								
-						</div>
-						<!-- </div> -->
+					<div class="col-xs-12 col-sm-12 col-md-12 ecodeImg">
+						<img src="img/download/ecode.jpg" alt="二维码">
 					</div>
-				</div>
-				<div class="col-xs-12 col-sm-6 col-md-6">
-					<div class="dl-phone center">
-						<img src="img/download/ph.png" alt="手机">
+					<div class="col-xs-12 col-sm-12 col-md-12">
+						<a  href="#" class="btn btn-transparent iphone">iPhonen版</a>
+						<a  href="description.html" class="btn btn-transparent android">Android版</a>								
 					</div>
 				</div>
 			</div>
+			<div class="col-xs-12 col-sm-6 col-md-6 phone-div">
+				<div class="dl-phone center">
+					<img src="img/download/ph.png" alt="手机">
+				</div>
+			</div>
 		</div>
+	</div>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/index.js"></script>
+	<script>		
+		$(function(){
+			var wh = $(window).width();
+			if(wh<768){
+				$(".phone-div").height($(window).height()-navHeight-20-$(".col-ecode").height());
+			}else{
+				$(".phone-div,.col-ecode").height($(window).height()-navHeight-20);
+			}		
+		})
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/index.js"></script>
-	</body>
-	</html>
+		$(window).resize(function(){		
+			var wh = $(window).width();	
+			if(wh<768){
+				$(".phone-div").height($(window).height()-navHeight-20-$(".col-ecode").height());
+				$(".col-ecode").height("auto");
+			}else{
+				$(".phone-div,.col-ecode").height($(window).height()-navHeight-20);
+			}
+		})		
+	</script>
+</body>
+</html>
