--- a/download.html
+++ b/download.html
@@ -74,6 +74,7 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/index.js"></script>
 	<script>		
+		var navHeight = $(".navbar").height();
 		$(function(){
 			var wh = $(window).width();
 			if(wh<768){
