--- a/about.html
+++ b/about.html
@@ -49,7 +49,10 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 		<div class="headerImg">
-			<img src="img/about/banner-txt.png" alt="产品介绍" class="center-img">
+			<!-- <img src="img/about/banner-txt.png" alt="产品介绍" class="center-img"> -->
+			<div class="t1 color-white">关于我们</div>
+			<div class="textLine"></div>
+			<div class="t1 color-white tEng">ABOUT  US</div>
 		</div>			
 	</div>
 	<div class="about01">
@@ -70,6 +73,8 @@
 						<div class="angle-small-right"></div>						
 						<div class="t2 center">2015年09月</div>
 						<div class="center">盔甲科技核心团队组建，<br>全部具备10年以上资深行业经验</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div> 
 					<div class="radio-border m-radio-right hide-before">
 						<div class="radio-coin"></div>
@@ -91,6 +96,8 @@
 							盔甲科技核心团队组建，<br>
 							全部具备10年以上资深行业经验
 						</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div>
 				</div>
 			</div>
@@ -103,6 +110,8 @@
 						<div class="center">
 							确定互联网同行系统解决方案方向，以最资深运营及技术团队调研变革发展中的车队，贴身实践研发“Auto+车队管理平台”
 						</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div> 
 					<div class="radio-border m-radio-right">
 						<div class="radio-coin"></div>
@@ -123,6 +132,8 @@
 						<div class="center">
 							自由知识产权“Auto+车队运营管理平台”正式发布，获得“最专业产品”口碑
 						</div>
+						<div class="angle-bottom"></div>
+						<div class="angle-small-bottom"></div>
 					</div>
 				</div>
 			</div>
@@ -209,27 +220,38 @@
 						<div class="tEng">Arnmor Tech Partner</div>
 						<div class="textLine"></div>
 					</div>
-				</div>	
-
-				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/about/cooperation1.png" alt="合作伙伴">
+				</div>
+				<div class="row nogutter mt50">
+					<div class="col-xs-6 col-sm-4 col-md-4">
+						<div class="cop-div">
+							<img src="img/about/cooperation1.png" alt="合作伙伴">
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/about/cooperation2.png" alt="合作伙伴">
+					<div class="col-xs-6 col-sm-4 col-md-4">
+						<div class="cop-div">
+							<img src="img/about/cooperation2.png" alt="合作伙伴">
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/about/cooperation3.png" alt="合作伙伴">
+					<div class="col-xs-6 col-sm-4 col-md-4">
+						<div class="cop-div">
+							<img src="img/about/cooperation3.png" alt="合作伙伴">
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/about/cooperation4.png" alt="合作伙伴">
+					<div class="col-xs-6 col-sm-4 col-md-4">
+						<div class="cop-div">
+							<img src="img/about/cooperation4.png" alt="合作伙伴">
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/about/cooperation5.png" alt="合作伙伴">
+					<div class="col-xs-6 col-sm-4 col-md-4">
+						<div class="cop-div">
+							<img src="img/about/cooperation5.png" alt="合作伙伴">
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/about/cooperation6.png" alt="合作伙伴">
-					</div>					
+					<div class="col-xs-6 col-sm-4 col-md-4">
+						<div class="cop-div">
+							<img src="img/about/cooperation6.png" alt="合作伙伴">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -246,21 +268,21 @@
 				</div>	
 				<div class="row mt50">
 					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="center">
+						<div class="center mt20">
 							<img src="img/about/phone.png" alt="联系电话">
 							<div class="bold mt mb">联系电话</div>
 							<div>电话热线：021-80394647-806</div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="center border-lf">
+						<div class="center border-lf mt20">
 							<img src="img/about/address.png" alt="公司地址">
 							<div class="bold mt mb">公司地址</div>
 							<div>公司地址：上海市宝山区丰翔路1000号1号楼3楼</div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4">
-						<div class="center">
+						<div class="center mt20">
 							<img src="img/about/email.png" alt="邮箱地址">
 							<div class="bold mt mb">邮箱地址</div>
 							<div>Email：sale@ikuijia.com</div>
@@ -277,5 +299,6 @@
 		<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 		<script src="js/bootstrap.min.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 	</html>
