--- a/index.html
+++ b/index.html
@@ -9,35 +9,108 @@
 
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/swiper.min.css">
 	<link href="css/style.css" rel="stylesheet">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+      <link href="css/ie.css" rel="stylesheet"> 
   <![endif]-->
-  <!--[if lte IE 8]> <link href="css/ie.css" rel="stylesheet"> <![endif]-->
 </head>
 <body class="homeBody">
-	<div class="homeTxt">
-		<!-- <img src="img/h1.png" alt="我使客户更强大"> -->
-		<img src="img/logo.png" alt="logo" class="logo1">
-		<div class="bigTxt">
-			我使客户<span class="red">更强大</span>
+	<!-- Swiper -->
+	<div class="swiper-container">
+		<div class="swiper-wrapper">
+			<div class="swiper-slide">
+				<div class="homeTxt">
+					<img src="img/logo.png" alt="logo" class="logo1">
+					<div class="bigTxt">
+						我使客户<span class="red">更强大</span>
+					</div>
+					<div>To Help Client more powerful</div>
+					<div class="mt20 lh-30">盔甲科技是一家DT（Data Technology）公司区别于IT公司“客户使我更强大”的特点，</div>
+					<div class="lh-30">我们的使命是：我使客户更强大！</div>
+					<div class="btn-div row mt50">
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<a class="btn btn-default btn-radius w-login" href="#">系统登录</a>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<a class="btn btn-red btn-radius in-show" href="description.html">进入演示</a>
+						</div>
+					</div>
+					<div class="mt50">
+						<img src="img/mouse.png" alt="鼠标" width="20">
+					</div>
+				</div>
+			</div>
+			<div class="swiper-slide">
+				<div class="homeTxt">
+					<img src="img/logo.png" alt="logo" class="logo1">
+					<div class="bigTxt">
+						我使客户<span class="red">更强大</span>
+					</div>
+					<div>To Help Client more powerful</div>
+					<div class="mt20">盔甲科技是一家DT（Data Technology）公司区别于IT公司”客户使我更强大”的特点，</div>
+					<div class="">我们的使命是：我是客户更强大</div>
+					<div class="btn-div row mt50">
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<a class="btn btn-default btn-radius w-login" href="#">系统登录</a>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<a class="btn btn-red btn-radius in-show" href="description.html">进入演示</a>
+						</div>
+					</div>
+					<div class="mt50">
+						<img src="img/mouse.png" alt="鼠标" width="20">
+					</div>
+				</div>
+			</div>
+			<div class="swiper-slide">
+				<div class="homeTxt">
+					<img src="img/logo.png" alt="logo" class="logo1">
+					<div class="bigTxt">
+						我使客户<span class="red">更强大</span>
+					</div>
+					<div>To Help Client more powerful</div>
+					<div class="mt20">盔甲科技是一家DT（Data Technology）公司区别于IT公司”客户使我更强大”的特点，</div>
+					<div class="">我们的使命是：我是客户更强大</div>
+					<div class="btn-div row mt50">
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<a class="btn btn-default btn-radius w-login" href="#">系统登录</a>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-6">
+							<a class="btn btn-red btn-radius in-show" href="description.html">进入演示</a>
+						</div>
+					</div>
+					<div class="mt50">
+						<img src="img/mouse.png" alt="鼠标" width="20">
+					</div>
+				</div>
+			</div>
 		</div>
-		<div>To Help Client more powerful</div>
-		<div class="mt20">盔甲科技是一家DT（Data Technology）公司区别于IT公司”客户使我更强大”的特点，</div>
-		<div class="">我们的使命是：我是客户更强大</div>		
-		<a class="btn btn-default btn-radius mt50" href="#">系统登录</a>
-		<a class="btn btn-red btn-radius mt50 ml " href="description.html">进入演示</a>
-		<div class="mt50">
-			<img src="img/mouse.png" alt="鼠标">
-		</div>		
-
+		<!-- Add Pagination -->
+		<div class="swiper-pagination"></div>
 	</div>
+
+	<!-- Swiper JS -->
+	<script src="js/swiper.min.js"></script>
+
+	<!-- Initialize Swiper -->
+	<script>
+		var swiper = new Swiper('.swiper-container', {
+			pagination: '.swiper-pagination',
+			direction: 'horizontal',
+			slidesPerView: 1,
+			paginationClickable: true,
+			spaceBetween: 30,
+			mousewheelControl: true
+		});
+	</script>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<!-- <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script> -->
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="js/bootstrap.min.js"></script>
+	<!-- <script src="js/bootstrap.min.js"></script> -->
 </body>
 </html>
