--- a/solution.html
+++ b/solution.html
@@ -49,21 +49,26 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 		<div class="headerImg">
-			<img src="img/solutions/banner-txt.png" alt="产品介绍" class="center-img">
+			<!-- <img src="img/solutions/banner-txt.png" alt="产品介绍" class="center-img"> -->
+			<div class="t1 color-white">解决方案</div>
+			<div class="textLine"></div>
+			<div class="t1 color-white tEng">SOLUTIONS</div>
 		</div>			
 	</div>
 	<div class="con01 container mt50">
-		<div class="row conTitle">
+		<div class="row conTitle ctt-s1">
 			<div class="col-xs-12 col-sm-12 col-md-12">
-				<h1 class="t1">| Auto+车辆SAAS服务解决方案</h1>
+				<div class="t1">| Auto+车辆SAAS服务解决方案</div>
 				<div class="tEng">Auto+ Vehicle SAAS Service Solutions</div>
 				<div class="textLine"></div>
-				<div class="dash">解决痛点</div>
+				<div class="dash t2">解决痛点</div>
 			</div> 		
 		</div>
-		<div class="row mt20">
+		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">
-				<img src="img/solutions/01.png" alt="资料泛滥，信息更新不及时">
+				<div class="center mt20">
+					<img src="img/solutions/n1.png" alt="资料泛滥，信息更新不及时">
+				</div>
 				<div class="t3 mt20">资料泛滥，信息更新不及时</div>
 				<div class="t3 red line-through">误 事 误 工</div>
 				<div class="infor mt">
@@ -74,7 +79,9 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">
-				<img src="img/solutions/02.png" alt="每月收租反复催缴">
+				<div class="center mt20">
+				<img src="img/solutions/n2.png" alt="每月收租反复催缴">
+			</div>
 				<div class="t3 mt20">每月收租反复催缴</div>
 				<div class="t3 red line-through">劳 心 伤 神</div>
 				<div class="infor mt">
@@ -84,7 +91,9 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">
-				<img src="img/solutions/03.png" alt="团队工作经常遗漏，规则制度">
+				<div class="center mt20">
+				<img src="img/solutions/n3.png" alt="团队工作经常遗漏，规则制度">
+			</div>
 				<div class="t3 mt20">团队工作经常遗漏，规则制度</div>
 				<div class="t3 red line-through">形 同 虚 设</div>
 				<div class="infor mt">
@@ -96,7 +105,9 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 center mt50">	
-				<img src="img/solutions/01.png" alt="证照过期天天跑政府">
+				<div class="center mt20">
+				<img src="img/solutions/n4.png" alt="证照过期天天跑政府">
+			</div>
 				<div class="t3 mt20">证照过期天天跑政府</div>
 				<div class="t3 red line-through">费 时 费 力</div>
 				<div class="infor mt">
@@ -106,15 +117,15 @@
 				</div>
 			</div>
 		</div>	
-		<div class="dash mt50">适应业态</div>	
+		<div class="dash t2 mt50">适应业态</div>	
 		
-		<div class="container">
+		<div class="container center">
 			<img src="img/solutions/adapt.png" alt="适应业态">
 		</div>
 	</div>
 	<div class="con02 mt50">
 		<div class="container">
-			<div class="row conTitle">
+			<div class="row conTitle ctt-s2">
 				<div class="col-xs-12 col-sm-12 col-md-12">
 					<h1 class="t1">| 金融服务车辆资产管理解决方案</h1>
 					<div class="tEng">Financial Services Vehicle Asset Management Solutions</div>
@@ -123,7 +134,7 @@
 			</div>
 			<div class="row mt20">
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/cloud-platform.png" alt="多机构管理云平台" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
@@ -136,7 +147,7 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">				
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/assets.png" alt="资产管理：全面、规范、及时的资产管理" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
@@ -149,7 +160,7 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">				
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/task.png" alt="任务管理：每天的工作任务自动提醒一目了然" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
@@ -162,7 +173,7 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-6 mt50 con02-sol">				
-					<div class="col-xs-2 col-sm-2 col-md-2 nogutter">
+					<div class="col-xs-2 col-sm-2 col-md-2 nogutter w-icon">
 						<img src="img/solutions/archives.png" alt="档案管理：全周期的资产档案、履约档案、客户档案自动形成" class="pull-right">
 					</div>
 					<div class="col-xs-10 col-sm-10 col-md-10">
@@ -179,7 +190,7 @@
 		</div>
 	</div>
 	<div class="con03 mt50 container">
-		<div class="row conTitle">
+		<div class="row conTitle ctt-s3">
 			<div class="col-xs-12 col-sm-12 col-md-12">
 				<h1 class="t1">| 保险行业车辆运营UBI解决方案</h1>
 				<div class="tEng">UBI Solutions For Vehicle Operations In The Insurance Industry</div>
@@ -222,7 +233,7 @@
 				</div>
 			</div>
 		</div>		
-		<div class="container mt50">
+		<div class="sol-bottom container mt50">
 			<img src="img/solutions/con03.png" alt="保险行业车辆运营UBI解决方案">
 		</div>		
 	</div>
@@ -230,5 +241,25 @@
 	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/index.js"></script>
+	<script>
+		$(function(){
+			var wh = $(window).width();
+			if(wh<768){
+				$(".sol-bottom img").attr("src","img/solutions/con03-m.png")
+			}else{
+				$(".sol-bottom img").attr("src","img/solutions/con03.png")
+			}		
+		})
+
+		$(window).resize(function(){		
+			var wh = $(window).width();	
+			if(wh<768){
+				$(".sol-bottom img").attr("src","img/solutions/con03-m.png")
+			}else{
+				$(".sol-bottom img").attr("src","img/solutions/con03.png")
+			}		
+		})		
+	</script>
 </body>
 </html>
