--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;">
+	<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0,user-scalable=0;">
 	<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
 	<title>首页</title>
 	<!-- Bootstrap -->
@@ -63,7 +63,7 @@
 							<a class="btn btn-default btn-radius w-login" href="#">系统登录</a>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6">
-							<a class="btn btn-red btn-radius in-show" href="description.html">进入演示</a>
+							<a class="btn btn-red btn-radius in-show" href="#">进入演示</a>
 						</div>
 					</div>
 					<div class="mt20">
@@ -85,7 +85,7 @@
 							<a class="btn btn-default btn-radius w-login" href="#">系统登录</a>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6">
-							<a class="btn btn-red btn-radius in-show" href="description.html">进入演示</a>
+							<a class="btn btn-red btn-radius in-show" href="#">进入演示</a>
 						</div>
 					</div>
 					<div class="mt20">
@@ -107,7 +107,7 @@
 							<a class="btn btn-default btn-radius w-login" href="#">系统登录</a>
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-6">
-							<a class="btn btn-red btn-radius in-show" href="description.html">进入演示</a>
+							<a class="btn btn-red btn-radius in-show" href="#">进入演示</a>
 						</div>
 					</div>
 					<div class="mt20">
