--- a/solution.html
+++ b/solution.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;">
+	<meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0,user-scalable=0;">
 	<!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
 	<title>解决方案</title>
 
@@ -232,8 +232,45 @@
 				</div>
 			</div>
 		</div>		
-		<div class="sol-bottom container mt50">
-			<img src="img/solutions/con03.png" alt="保险行业车辆运营UBI解决方案">
+		<div class="container mt50 mb30">
+			<div class="sol-bottom">
+				<img src="img/solutions/con3.png" alt="保险行业车辆运营UBI解决方案">
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="sol-wrap">
+						<div class="icon center">
+							<img src="img/solutions/car.jpg" alt="车">
+						</div>
+						<div class="center bold mt">车</div>
+						<div class="sw-txt">
+							融合了车务、保养、维护的资产管理，随时掌握风险
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="sol-wrap">
+						<div class="icon center">
+							<img src="img/solutions/p.jpg" alt="人">
+						</div>
+						<div class="center bold mt">人</div>
+						<div class="sw-txt">
+							融合了车务、保养、维护的资产管理，随时掌握风险
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<div class="sol-wrap">
+						<div class="icon center">
+							<img src="img/solutions/m.jpg" alt="经营者">
+						</div>
+						<div class="center bold mt">经营者</div>
+						<div class="sw-txt">
+							融合了车务、保养、维护的资产管理，随时掌握风险
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>		
 	</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -244,21 +281,21 @@
 	<script>
 		$(function(){
 			var wh = $(window).width();
-			if(wh<768){
+			/*if(wh<768){
 				$(".sol-bottom img").attr("src","img/solutions/con03-m.png")
 			}else{
 				$(".sol-bottom img").attr("src","img/solutions/con03.png")
-			}		
+			}		*/
 		})
 
-		$(window).resize(function(){		
+		/*$(window).resize(function(){		
 			var wh = $(window).width();	
 			if(wh<768){
 				$(".sol-bottom img").attr("src","img/solutions/con03-m.png")
 			}else{
 				$(".sol-bottom img").attr("src","img/solutions/con03.png")
 			}		
-		})		
+		})		*/
 	</script>
 </body>
 </html>
