--- a/download.html
+++ b/download.html
@@ -46,7 +46,7 @@
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>	
-	<div class="container">
+	<div class="container dldContainer">
 		<div class="row dnld-height">
 			<div class="col-xs-12 col-sm-6 col-md-6 col-ecode">	
 				<div class="col-xs-12 col-sm-12 col-md-12">
