--- a/download.html
+++ b/download.html
@@ -51,11 +51,11 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 col-ecode">	
 				<div class="col-xs-12 col-sm-12 col-md-12">
 					<div class="d-left">
-						<div class="t1">智慧车队管理端v2.3</div>
-						<div class="t3">我  使  客  户  更  强  大  ！</div>
+						<div class="dnld_txt">智慧车队管理端v2.3</div>
+						<div class="dnld_t2">我  使  客  户  更  强  大  ！</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12">
+				<div class="col-xs-12 col-sm-12 col-md-12 ecode_wrap">
 					<div class="col-xs-6 col-sm-6 col-md-6 ecode-div">
 						<img src="img/download/ecode.jpg" alt="二维码">
 					</div>
@@ -93,16 +93,19 @@
 			//计算手机显示的高度
 			if(wh<768){
 				$(".phone-div").height(conHeight-$(".col-ecode").height()-20);
+				$(".col-ecode").css({
+					"margin-top": 0
+				});
 			}else{
 				$(".phone-div").height(conHeight);
 				var phone_div = $(".dl-phone").height();
 				$(".col-ecode").css({
-					"margin-top": conHeight-phone_div+30
+					"margin-top": conHeight-phone_div
 				});
 			}
 
 			var ecodeImgHeight = $(".ecode-div").height();
-			var btnHeight = (ecodeImgHeight-14)/2;
+			var btnHeight = (ecodeImgHeight-$(".android").css("margin-top").replace('px', ''))/2;
 			$(".btn-transparent").css({
 				"height": btnHeight+"px",
 				"line-height":btnHeight+"px"
