--- a/solution.html
+++ b/solution.html
@@ -255,7 +255,7 @@
 						</div>
 						<div class="center bold mt">人</div>
 						<div class="sw-txt">
-							融合了车务、保养、维护的资产管理，随时掌握风险
+							结合车载GPS、OBD的精准UBI分析
 						</div>
 					</div>
 				</div>
@@ -266,7 +266,7 @@
 						</div>
 						<div class="center bold mt">经营者</div>
 						<div class="sw-txt">
-							融合了车务、保养、维护的资产管理，随时掌握风险
+							经营者UBA，贯穿始终，为保险公司提供第一手客户情报
 						</div>
 					</div>
 				</div>
