--- a/solution.html
+++ b/solution.html
@@ -31,7 +31,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="#">
-						<img src="img/logo.png" alt="网站logo" class="logo">
+						<div class="icon-bg logo"></div>
 					</a>
 				</div>
 
